resources/insights-stage/kibana-stage/kibana.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  host: kibana.apps.crc-stg-01.o4v9.p1.openshiftapps.com
  port:
    targetPort: proxy-port
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: kibana
    weight: 100
  wildcardPolicy: None
